forth/test/fail/test_const_fold_redundant_loc_udiv_zero.af
use' ../../lang.af
fun: test_const_fold_redundant_loc_udiv_zero { val -- out } 0 u/: val val end
